# oil-riggery

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
data/: Data_explorer.py
data/pages/: 1_NEPU_OWOD-1.0.py
oil_riggery/data/pages/: 1_NEPU_OWOD-1.0.py
oil_riggery/src/: .gitignore  dataset.py  train.py
oil_riggery/src/datasets/NEPU/images/: .gitignore
oil_riggery/src/datasets/NEPU/labels/: train.cache  val.cache
oil_riggery/src/datasets/NEPU/labels/test/: 0_15.txt  100_18.txt  100_34.txt  100_35.txt  100_53.txt  100_60.txt  100_70.txt  100_77.txt  100_78.txt  100_87.txt  101_1.txt  101_15.txt  101_2.txt  101_33.txt  101_59.txt  101_81.txt  102_11.txt  102_18.txt  102_26.txt  102_45.txt  102_62.txt  102_90.txt  103_2.txt  103_25.txt  103_47.txt  103_56.txt  103_59.txt  103_61.txt  103_91.txt  104_10.txt  104_15.txt  104_18.txt  104_29.txt  104_32.txt  104_40.txt  104_53.txt  104_6.txt  104_77.txt  104_8.txt  105_13.txt  (+3 more)
oil_riggery/src/datasets/NEPU/labels/train/: 0_12.txt  0_13.txt  0_14.txt  0_16.txt  0_17.txt  0_18.txt  0_19.txt  0_20.txt  0_21.txt  0_22.txt  0_23.txt  0_24.txt  0_25.txt  0_26.txt  0_27.txt  0_28.txt  0_29.txt  0_30.txt  0_31.txt  0_32.txt  0_33.txt  0_34.txt  0_35.txt  0_36.txt  0_37.txt  0_38.txt  0_39.txt  0_4.txt  0_40.txt  0_41.txt  0_42.txt  0_43.txt  0_44.txt  0_5.txt  0_7.txt  0_8.txt  0_9.txt  100_0.txt  100_1.txt  100_100.txt  (+305 more)
oil_riggery/src/datasets/NEPU/labels/val/: 0_10.txt  0_11.txt  100_19.txt  100_21.txt  100_3.txt  100_38.txt  100_80.txt  100_86.txt  101_19.txt  101_29.txt  101_44.txt  101_64.txt  101_78.txt  (+31 more)
oil_riggery/src/lib/: image.py
oil_riggery/src/oil_riggery_yolov5/datasets/NEPU/: .gitignore  loader.py
oil_riggery/src/yolov5/: train.py
src/: config.py  dataset.py  train.py
tests/lib/: test_image.py
