[tool.poetry]
name = "oil-riggery"
version = "0.1.0"
description = "automatic detection of oil rigs from satellite images"
authors = ["Pierre Segonne <pierre.segonne@protonmail.com>"]
readme = "README.md"
packages = [
    { include = "oil_riggery", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
opencv-python = "^4.8.0.74"
tensorflow = "^2.13.0"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.25.0"
watchdog = "^3.0.0"
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.4"
pytest = "^7.4.0"
untangle = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
