[tool.poetry]
name = "oil-riggery"
version = "0.1.0"
description = "automatic detection of oil rigs from satellite images"
authors = ["Pierre Segonne <pierre.segonne@protonmail.com>"]
readme = "README.md"
packages = [
    { include = "oil_riggery", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
opencv-python = ">=4.1.1"
tensorflow = "^2.13.0"
matplotlib = ">=3.3"
scikit-learn = "^1.3.0"
psutil = "^5.9.6"
gitpython = ">=3.1.30"
numpy = ">=1.22.2"
pillow = ">=7.1.2"
pyyaml = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
thop = ">=0.1.1"
torch = ">=1.8.0"
torchvision = ">=0.9.0"
tqdm = ">=4.64.0"
ultralytics = ">=8.0.147"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
setuptools = ">=65.5.1"
clearml = "^1.13.1"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.25.0"
watchdog = "^3.0.0"
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.4"
pytest = "^7.4.0"
untangle = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
